added text to table

--- a/test.html
+++ b/test.html
@@ -6,29 +6,55 @@
     <link rel="stylesheet" href="tables.css" type="text/css" media="all">
     <title>Document</title>
 </head>
-<body>
+<body> <!--??-->
     <table id="tabtab">
+
+        <thead>
+            <tr>
+                <td>Mennyiség</td>
+                <td>*   Egységár</td>
+                <td id="negy"></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Megnevezés</td>
+                <td></td>
+                <td>Érték</td>
+                <td>ÁFA</td>
+            </tr>
+        </thead>
+
         <tr>
-            <td>1</td>
-            <td>2</td>
-            <td>3</td>
-        </tr>
-        <tr>
-            <td>4</td>
+            <td>Cikkszám</td>
+            <td>9005753006706</td>
             <td>5</td>
-            <td rowspan="3" id="six">6</td>
+            <td id="six">6</td>
         </tr>
         <tr>
-            <td id="seven">7</td>
-            <td>8</td>
+            <td id="seven"></td>
+            <td>44 990,00 Ft/db</td>
+            <td></td>
+            <td></td>
         </tr>
         <tr>
-            <td>10</td>
-            <td>11</td>
+            <td>Akkumulátor 62AH</td>
+            <td></td>
+            <td>44 990</td>
+            <td>C00</td>
         </tr>
         <tr>
-            <td colspan="2">13</td>
-            <td>15</td>
+            <td colspan="2">Eng. (Összeg)</td>
+            <td>-6 789</td>
+            <td>eC00</td>
+        </tr>
+        <tr>
+            <td colspan="2">C - 21,26%</td>
+            <td>38 241</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td colspan="2">Összesen</td>
+            <td colspan="2">38 241</td>
         </tr>
     </table>
 </body>
